# the-desk

./: .cursorrules  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/: mcp.example.json  mcp.json
.cursor/plans/: cursor_agent_memory_integration_5b65ef90.plan.md  higher-timeframe_one-timeframing_81d96929.plan.md  risk_manager_integration_d5f50886.plan.md  risk_manager_integration_e978b035.plan.md  signal_outcome_repair_e3880ad7.plan.md  trader_memory_layer_3420698b.plan.md
.cursor/rules/: agent-md-always-apply.mdc  agent-scope.mdc
.githooks/: pre-commit
.github/workflows/: rust.yml
agents/: backtest-analyst.md  data-integrity-validator.md  dtc-protocol-researcher.md  levels-analyst.md  market-structure-analyst.md  options-api-researcher.md  orchestrator.md  orderflow-analyst.md  performance-analyst.md  pipeline-verifier.md  playbook-evaluator.md  prompt-quality-evaluator.md  risk-coach.md
commands/: build-check.md  coaching-test.md  dtc-check.md  feed-check.md  frontend-check.md  pipeline-test.md  quick-check.md  replay-session.md  rust-check.md  schema-validate.md  secret-scan.md  unknowns-pass.md
docs/: agent-interaction-guide.md  core-flows.md  data-and-backtesting-guide.md  decision-log.md  dom-replay.md  epic-brief.md  idea000-idea012-backtest-runbook.md  multi-instrument-flow-architecture.md  phase-1-prd.md  phase-2-options-databento-memo.md  phase-2-prd.md  phase-3-prd.md  prompt-spec.md  risk-setup.md  setup-ideas-and-backtesting.md  sierra-chart-settings.md  sierra-chart-spx-data-and-performance-2026-07-08.md  social-confluence-design.md  social-intelligence-roadmap.md  the-desk-vision-v1.md  the-desk-vision.md
docs/architecture/: data-flow.md
docs/mcp/: README.md  tool-reference.md
docs/ops/: automation-and-storage.md
docs/setup-ideas/: IDEA-024-market-maker-pressure-inference.md  IDEA-025-nqstats-stat-library-setups.md  IDEA-026-volsignals-vs3d-vendor-eval.md  IDEA-027-options-data-vendor-comparison.md  _template.md  codebase-audit.md  idea-000-regime-gated-setup-selector.md  idea-001-opening-drive-classification.md  idea-002-trapped-trader-reversal.md  idea-003-naked-vpoc-magnet.md  idea-004-multi-tf-cvd-divergence.md  idea-005-session-transition-sweeps.md  idea-006-volume-imbalance-bars.md  idea-007-microstructure-regime-detection.md  idea-008-0dte-gamma-regime.md  idea-009-nq-es-smt-divergence.md  idea-010-fair-value-gap.md  idea-011-one-sided-ib-extension.md  index.md  (+14 more)
src/: App.test.tsx  App.tsx  backfill.rs  backup.rs  index.css  lib.rs  memory.rs  observability.rs  outcome_tracker.rs  outcomes.rs  rollover.rs  scid_tick_ingest.rs  scid_timestamp_diagnostics.rs  templates.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backfill.rs  commands.rs  dom_replay.rs  lib.rs  main.rs  memory.rs  outcome_tracker.rs  scid_tick_ingest.rs
src-tauri/src/db/: mod.rs
src-tauri/src/depth/: mod.rs
src-tauri/src/dtc/: messages.rs  mock_server.rs  mod.rs  parser.rs
src-tauri/src/feed/: mod.rs  scid_reader.rs  symbol_resolution.rs
src-tauri/src/options/: mod.rs
src-tauri/src/pipelines/: absorption.rs  day_type.rs  delta.rs  event_detector.rs  flow_event_emitter.rs  footprint.rs  levels.rs  mod.rs  pinch.rs  rebid_reoffer.rs  rvol.rs  tape_pace.rs  tpo.rs  trade_size.rs  vwap.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/research/: mod.rs
src-tauri/src/risk/: mod.rs
src-tauri/src/rules/: mod.rs
tests/: mcp_stdio.rs  session_replay_golden.rs
(+95 files in other folders)
