[package]
name = "the-desk-backend"
version = "0.1.0"
edition = "2021"
default-run = "the-desk-mcp"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
